--- a/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
             <!-- END TOP BAR -->
             <div class="wrapper">
                 <!-- LEFT BAR -->
-                <div id="left_bar" class="left-bar bg-dark text-white pt-2 left_bar expand">
+                <div id="left_bar" class="left-bar bg-dark text-white pt-2 expand" onclick="hideMenu();">
                     <div class="bar-container">
                         <div class="expand-control unselectable">
                             <div class="material-icons arrow-bar size-32 c-pointer pl-3">chevron_right</div>
@@ -152,14 +152,7 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     @RenderSection("Scripts", required: false)
     <script>
-        $("#left_bar").click(function () {
-            if ($("#left_bar").hasClass("expand")) {
-                $("#left_bar").removeClass("expand");
-            } else {
-                $("#left_bar").addClass("expand");
-            }
-        });
-
+        var hideMenuLeft = true;
         $(document).ready(function () {
             updateContainer();
             $(window).resize(function () {
@@ -167,13 +160,30 @@
             });
         });
 
+        function hideMenu() {
+            hideMenuLeft = !hideMenuLeft;
+            sessionStorage.setItem("hideMenu", hideMenuLeft);
+            eventHide();
+        }
+
+        function eventHide() {
+            var sessionMenu = sessionStorage.getItem("hideMenu");
+            if (sessionMenu == "false") {
+                $(".left-bar").removeClass("expand");
+            } else {
+                $(".left-bar").addClass("expand");
+            }
+        }
+
         function updateContainer() {
             var $containerHeight = $(window).height();
-            if ($containerHeight <= 818) {
-                $("#left_bar").removeClass("expand");
+            console.log($containerHeight);
+            if ($containerHeight <= 776) {
+                $(".left-bar").removeClass("expand");
             }
-            if ($containerHeight > 819) {
-                $("#left_bar").addClass("expand");
+            if ($containerHeight > 777) {
+                $(".left-bar").addClass("expand");
+                eventHide();
             }
         }
 
